[package]

name = "bodyparser"
version = "0.0.6"
license = "MIT"
description = "Body parsing middleware for Iron."
repository = "https://github.com/iron/body-parser"
documentation = "http://ironframework.io/doc/bodyparser/index.html"
authors = ["Patrick Tran <patrick.tran06@gmail.com>",
           "Jonathan Reem <jonathan.reem@gmail.com>"]
keywords = ["iron", "web", "http", "parsing", "parser"]

[dependencies]
iron = { git = "https://github.com/r-arias/iron" }
rustc-serialize = "*"
plugin = "*"
persistent = { git = "https://github.com/r-arias/persistent" }
